EEVEE Next regression: Viewport navigation: Jittered shadows #123269

Closed
opened 2024-06-15 17:42:50 +02:00 by David Black · 6 comments

System Information
Linux Mint 21.3 Cinnamon. kernel 6.5.0-35
3400G

Blender Version
Broken: blender-4.2.0-beta+v42.6f724b83c663-linux.x86_64-release.tar.xz (and newer)
Worked: blender-4.2.0-beta+v42.965a13867111-linux.x86_64-release.tar.xz

Short description of error
Pausing after Viewport navigation results in no jittered shadows

Exact steps for others to reproduce the error

  1. Load the Jittered_shadow_issue.blend
  2. Using middle mouse button / navigation gizmo, rotate the view
  3. Keeping mouse button pressed / navigation gizmo activated, stop rotation and pause for a moment
  4. Releasing mouse button / navigation gizmo, results in no jittered shadows

Hi @Jeroen-Bakker,
Possibly caused by e1ee3ed7df commit?

Kind regards.

**System Information** Linux Mint 21.3 Cinnamon. kernel 6.5.0-35 3400G **Blender Version** Broken: blender-4.2.0-beta+v42.6f724b83c663-linux.x86_64-release.tar.xz (and newer) Worked: blender-4.2.0-beta+v42.965a13867111-linux.x86_64-release.tar.xz **Short description of error** Pausing after Viewport navigation results in no jittered shadows **Exact steps for others to reproduce the error** 1. Load the [`Jittered_shadow_issue.blend`]([Jittered_shadow_issue.blend](/attachments/bd4726ba-3111-4fcc-8f0e-aed9ae26f39f)) 2. Using middle mouse button / navigation gizmo, rotate the view 3. Keeping mouse button pressed / navigation gizmo activated, stop rotation and pause for a moment 4. Releasing mouse button / navigation gizmo, results in no jittered shadows Hi @Jeroen-Bakker, Possibly caused by https://projects.blender.org/blender/blender/commit/e1ee3ed7dff9fb01624c32e085853b4906e8464d commit? Kind regards.
David Black added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-06-15 17:42:50 +02:00
Member

Since Jereon has taking on fixing this issue, I will mark it as confirmed.

Since Jereon has taking on fixing this issue, I will mark it as confirmed.
Jeroen Bakker added
Type
Bug
and removed
Type
Report
labels 2024-06-17 07:48:48 +02:00
Jeroen Bakker added this to the 4.2 LTS milestone 2024-06-17 07:48:52 +02:00
Jeroen Bakker added this to the Viewport & EEVEE project 2024-06-17 07:48:55 +02:00
Jeroen Bakker self-assigned this 2024-06-17 07:49:01 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-17 09:34:45 +02:00
Author

Thank you @Jeroen-Bakker for your rapid fix.

Feedback after testing...

Appears e1ee3ed7df functionality is now only operational if jittered shadows Viewport option is disabled?
With jittered shadows enabled, the Viewport bubbles (for want of a better term), like it previously did while navigating and pausing.

Is it possible to keep the aesthetically pleasing e1ee3ed7df style while navigating, and repaint the Viewport including jittered shadows, as the mouse button is released?

Thank you for your time, consideration, and amazing coding skills.

Thank you @Jeroen-Bakker for your rapid fix. **Feedback after testing...** Appears https://projects.blender.org/blender/blender/commit/e1ee3ed7dff9fb01624c32e085853b4906e8464d functionality is now only operational if jittered shadows Viewport option is disabled? With jittered shadows enabled, the Viewport bubbles (for want of a better term), like it previously did while navigating and pausing. Is it possible to keep the aesthetically pleasing https://projects.blender.org/blender/blender/commit/e1ee3ed7dff9fb01624c32e085853b4906e8464d style while navigating, and repaint the Viewport including jittered shadows, as the mouse button is released? Thank you for your time, consideration, and amazing coding skills.
Member

We rather keep the number of options limited otherwise the UI gets cluttered with options many users don't touch. Technically what you ask is possible, it is unclear if this is a good default for most cases.
Perhaps open a RCS to get user feedback or post on our feedback thread in devtalk

We rather keep the number of options limited otherwise the UI gets cluttered with options many users don't touch. Technically what you ask is possible, it is unclear if this is a good default for most cases. Perhaps open a RCS to get user feedback or post on our feedback thread in devtalk
Author

Ah! Didn't mean adding extra UI options, just how the implementation works behind the scenes.

Ah! Didn't mean adding extra UI options, just how the implementation works behind the scenes.
Author

Tried making some videos to help explain (for the videos, Viewport Pixel Size 2x for improved iGPU performance).

Current - without jittered shadows

Current - with jittered shadows

Tried making some videos to help explain (for the videos, Viewport Pixel Size 2x for improved iGPU performance). **Current - without jittered shadows** <video src="/attachments/9c50b3a2-1a52-455e-bd70-b9870720317e" title="Current - without jittered shadows.mp4" controls></video> **Current - with jittered shadows** <video src="/attachments/b0c6c90b-9473-4df6-9927-cfef973d43cb" title="Current - with jittered shadows.mp4" controls></video>
Author

Apologies @Jeroen-Bakker for extra comments (current 'Edit' comments limitation**),

Previous 'Proposed...' video didn't illustrate well how nice the Viewport appears with your patch, so created a new version...

Proposed - with jittered shadows
(basically, same as the 1st video (without jittered shadows), except, after navigation, as the mouse button is released, the Viewport is repainted adding the jittered shadows)

**Adding new files to a previous comment only provides a 'Remove file' option, without a 'Copy link' option.

Apologies @Jeroen-Bakker for extra comments (current 'Edit' comments limitation**), Previous 'Proposed...' video didn't illustrate well how nice the Viewport appears with your patch, so created a new version... **Proposed - with jittered shadows** (basically, same as the 1st video (without jittered shadows), except, after navigation, as the mouse button is released, the Viewport is repainted adding the jittered shadows) <video src="/attachments/f5279c5b-849c-4ff2-847e-d5ac9142931c" title="Proposed - with jittered shadows.mp4" controls></video> **Adding new files to a previous comment only provides a 'Remove file' option, without a 'Copy link' option.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#123269
No description provided.