Fix #123269: Shadow jittering when navigating

When navigating the viewport, the shadow jittering wasn't always
updated anymore. Regression introduced by e1ee3ed7dff9fb01624c32e085853b4906e8464d

Pull Request: https://projects.blender.org/blender/blender/pulls/123282